Implement design changes

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
   <script src="https://kit.fontawesome.com/cb7d110060.js" crossorigin="anonymous"></script>
 
-  <title>Your Fitness</title>
+  <title>Track Progress</title>
 </head>
 
 <body>
